# tarbly

./: CMakeLists.txt
inc/: header.h  tar.h  tarbly.h  types.h  types.h.rej  util.h
src/: CMakeLists.txt  header.c  tar.c  tarbly.c  util.c
